# SnailActions

./: CMakeLists.txt  README.md  action.cpp  button.cpp  button.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  slider.cpp  slider.h  util.cpp  util.h
actionwidgets/: actionwidget.cpp  actionwidget.h  button.cpp  button.h  slider.cpp  slider.h
res/: resource.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h  util.cpp  util.h
src/actionwidgets/: actionwidget.cpp  button.cpp  button.h  slider.cpp  slider.h
